fix: add backend-base-url and apply frontUrlResolver due to smart redirection